# ken

./: README.md  glossary.json
.github/workflows/: glossary.yml
docs/: README.html  README.md  glossary.html  index.md
docs/assets/: .glossary-template
docs/assets/css/: style.css
docs/spec/: README.md  asides.md  colors.md  css.md  experiments.html  highlights.md  hypertext.md  index.md  metadata.md  tables.md
rust/: Cargo.toml  README.md
rust/src/: html.rs  lib.rs  main.rs
rust/src/generator/: mod.rs
rust/src/parser/: fid.rs  mod.rs
rust/src/parser/block/: hr.rs  mod.rs
rust/tests/: lib.rs
rust/tests/fixtures/: mod.rs
rust/tests/fixtures/files/: list1.text
