[package]
name = "ken"
version = "0.1.0"
authors = ["Daniel Hardman <daniel.hardman@gmail.com>"]
description = "Native Rust library for parsing Ken and (outputting HTML)"
repository = "https://github.com/dhh1128/ken"
readme = "README.md"
keywords = ["markdown", "md", "html", "parser", "ken"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["test.md"]

[build-dependencies]
built = "0.5"

[[bin]]
name = "ken"
doc = false

[features]
default = []
unstable = []

[dependencies]
lazy_static = "1.4.0"
pipeline = "0.5"
regex = "1"
colored = "2"
walkdir = "2"
clap = { version = "3.1.5", features = ["cargo"] }

[dev-dependencies]
difference = "0.4"

